--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,12 +14,16 @@ macro(package_add_test TESTNAME)
     gtest_discover_tests(${TESTNAME}
         # set a working directory so your project root so that you can find test data via paths relative to the project root
         WORKING_DIRECTORY ${PROJECT_DIR}
-        PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
+        PROPERTIES
+        VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
     )
-    set_target_properties(${TESTNAME} PROPERTIES
-        FOLDER tests
-        MSVC_RUNTIME_LIBRARY "MultiThreadedDLL"
-    )
+    if (MSVC)
+        target_compile_options(${TESTNAME} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${TESTNAME} PRIVATE -Wall -Wextra -Wshadow)
+    endif()
+
+    set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
 endmacro()
 
 package_add_test(buffer-test
